[gd_scene load_steps=12 format=3 uid="uid://bfym6wmesrxxa"]

[ext_resource type="Script" uid="uid://dw48sv6soymjx" path="res://ui/towers_menu/towers_menu.gd" id="1_d3tgk"]
[ext_resource type="Texture2D" uid="uid://b67gt8lnugpg3" path="res://assets/sprites/towers/torreticas.png" id="2_d3tgk"]
[ext_resource type="Texture2D" uid="uid://kt17qx3lclba" path="res://assets/sprites/towers/gemas_RGB.png" id="3_yrsgh"]
[ext_resource type="PackedScene" uid="uid://cupq5fkss800q" path="res://ui/towers_menu/tower_count/tower_count.tscn" id="5_1xlmg"]

[sub_resource type="Theme" id="Theme_d3tgk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d3tgk"]
atlas = ExtResource("2_d3tgk")
region = Rect2(0, 0, 128, 191)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrsgh"]
atlas = ExtResource("2_d3tgk")
region = Rect2(256, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oaxy"]
atlas = ExtResource("2_d3tgk")
region = Rect2(128, 0, 128, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xlmg"]
atlas = ExtResource("3_yrsgh")
region = Rect2(20, 25, 59, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxxr0"]
atlas = ExtResource("3_yrsgh")
region = Rect2(121, 25, 59, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_61shu"]
atlas = ExtResource("3_yrsgh")
region = Rect2(220, 25, 60, 49)

[node name="TowersMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_d3tgk")

[node name="BuildTowerMenu" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.86600006
anchor_right = 0.134
anchor_bottom = 0.9990001
offset_top = -0.28009033
offset_right = -0.27999878
offset_bottom = 0.079956055

[node name="Panel" type="Panel" parent="BuildTowerMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -169.0
offset_right = 498.0
offset_bottom = -29.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BuildTowerMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.80100006
anchor_right = 1.0
anchor_bottom = 0.983
offset_left = 36.86
offset_top = -133.34395
offset_right = 455.65997
offset_bottom = -40.624023
grow_horizontal = 2
grow_vertical = 0

[node name="RedTowerButton" type="TextureButton" parent="BuildTowerMenu/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = SubResource("Theme_d3tgk")
texture_normal = SubResource("AtlasTexture_d3tgk")
ignore_texture_size = true
stretch_mode = 0

[node name="BlueTowerButton" type="TextureButton" parent="BuildTowerMenu/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_yrsgh")
ignore_texture_size = true
stretch_mode = 0

[node name="GreenTowerButton" type="TextureButton" parent="BuildTowerMenu/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_0oaxy")
ignore_texture_size = true
stretch_mode = 0

[node name="TowersCount" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 288.0
offset_right = 57.0
offset_bottom = 328.0
theme_override_constants/separation = 30

[node name="RedTowerCount" parent="TowersCount" instance=ExtResource("5_1xlmg")]
layout_mode = 2
icon = SubResource("AtlasTexture_1xlmg")

[node name="GreenTowerCount" parent="TowersCount" instance=ExtResource("5_1xlmg")]
layout_mode = 2
icon = SubResource("AtlasTexture_lxxr0")

[node name="BlueTowerCount" parent="TowersCount" instance=ExtResource("5_1xlmg")]
layout_mode = 2
icon = SubResource("AtlasTexture_61shu")

[connection signal="pressed" from="BuildTowerMenu/HBoxContainer/RedTowerButton" to="." method="_on_red_tower_button_pressed"]
[connection signal="pressed" from="BuildTowerMenu/HBoxContainer/BlueTowerButton" to="." method="_on_blue_tower_button_pressed"]
[connection signal="pressed" from="BuildTowerMenu/HBoxContainer/GreenTowerButton" to="." method="_on_green_tower_button_pressed"]
